try to fix the maker/speaker spacing

--- a/wp-content/themes/makerfaire/less/panels.less
+++ b/wp-content/themes/makerfaire/less/panels.less
@@ -295,7 +295,8 @@
             text-decoration: underline;
          }
       }
-      .thumbnail {
+      #performers .thumbnail {
+			margin: 0 auto 30px;
          background-color: #000;
          width: 350px;
          height: 304px;
